src/lib.rs

    pub fn HPDF_Page_GetExtGStateName(page: HPDF_Page, gstate: HPDF_ExtGState)
     -> *const ::libc::c_char;
    pub fn HPDF_Page_GetMediaBox(page: HPDF_Page) -> HPDF_Box;
    pub fn HPDF_Page_SetBoxValue(page: HPDF_Page, name: *const ::libc::c_char,
                                 index: HPDF_UINT, value: HPDF_REAL)
     -> HPDF_STATUS;
    pub fn HPDF_Page_SetFilter(page: HPDF_Page, filter: HPDF_UINT) -> ();
    pub fn HPDF_Page_CheckState(page: HPDF_Page, mode: HPDF_UINT)
     -> HPDF_STATUS;
    pub fn HPDF_OutlineRoot_New(mmgr: HPDF_MMgr, xref: HPDF_Xref)
     -> HPDF_Outline;
    pub fn HPDF_Outline_New(mmgr: HPDF_MMgr, parent: HPDF_Outline,
                            title: *const ::libc::c_char,
                            encoder: HPDF_Encoder, xref: HPDF_Xref)
     -> HPDF_Outline;
    pub fn HPDF_Outline_GetFirst(outline: HPDF_Outline) -> HPDF_Outline;
    pub fn HPDF_Outline_GetLast(outline: HPDF_Outline) -> HPDF_Outline;
    pub fn HPDF_Outline_GetPrev(outline: HPDF_Outline) -> HPDF_Outline;
    pub fn HPDF_Outline_GetNext(outline: HPDF_Outline) -> HPDF_Outline;
    pub fn HPDF_Outline_GetParent(outline: HPDF_Outline) -> HPDF_Outline;
    pub fn HPDF_Outline_GetOpened(outline: HPDF_Outline) -> HPDF_BOOL;
    pub fn HPDF_Outline_Validate(obj: HPDF_Outline) -> HPDF_BOOL;
    pub fn HPDF_Doc_FindEncoder(pdf: HPDF_Doc,
                                encoding_name: *const ::libc::c_char)
     -> HPDF_Encoder;
    pub fn HPDF_Doc_FindFontDef(pdf: HPDF_Doc,
                                font_name: *const ::libc::c_char)
     -> HPDF_FontDef;
    pub fn HPDF_Doc_FindFont(pdf: HPDF_Doc, font_name: *const ::libc::c_char,
                             encoding_name: *const ::libc::c_char)
     -> HPDF_Font;
    pub fn HPDF_Doc_Validate(pdf: HPDF_Doc) -> HPDF_BOOL;
    pub fn HPDF_Doc_GetCurrentPages(pdf: HPDF_Doc) -> HPDF_Pages;
    pub fn HPDF_Doc_AddPagesTo(pdf: HPDF_Doc, parent: HPDF_Pages)
     -> HPDF_Pages;
    pub fn HPDF_Doc_SetCurrentPages(pdf: HPDF_Doc, pages: HPDF_Pages)
     -> HPDF_STATUS;
    pub fn HPDF_Doc_SetCurrentPage(pdf: HPDF_Doc, page: HPDF_Page)
     -> HPDF_STATUS;
    pub fn HPDF_GetFontDef(pdf: HPDF_Doc, font_name: *const ::libc::c_char)
     -> HPDF_FontDef;
    pub fn HPDF_Doc_RegisterFontDef(pdf: HPDF_Doc, fontdef: HPDF_FontDef)
     -> HPDF_STATUS;
    pub fn HPDF_Doc_RegisterEncoder(pdf: HPDF_Doc, encoder: HPDF_Encoder)
     -> HPDF_STATUS;
    pub fn HPDF_Doc_SetEncryptOn(pdf: HPDF_Doc) -> HPDF_STATUS;
    pub fn HPDF_Doc_SetEncryptOff(pdf: HPDF_Doc) -> HPDF_STATUS;
    pub fn HPDF_Doc_PrepareEncryption(pdf: HPDF_Doc) -> HPDF_STATUS;
    pub fn HPDF_PDFA_AppendOutputIntents(pdf: HPDF_Doc,
                                         iccname: *const ::libc::c_char,
                                         iccdict: HPDF_Dict) -> HPDF_STATUS;
    pub fn HPDF_PDFA_SetPDFAConformance(pdf: HPDF_Doc,
                                        pdfatype: HPDF_PDFAType)
     -> HPDF_STATUS;
    pub fn HPDF_PDFA_GenerateID(arg1: HPDF_Doc) -> HPDF_STATUS;
    pub fn HPDF_GetVersion() -> *const ::libc::c_char;
    pub fn HPDF_NewEx(user_error_fn: HPDF_Error_Handler,
                      user_alloc_fn: HPDF_Alloc_Func,
                      user_free_fn: HPDF_Free_Func,
                      mem_pool_buf_size: HPDF_UINT,
                      user_data: *mut ::libc::c_void) -> HPDF_Doc;
    pub fn HPDF_New(user_error_fn: HPDF_Error_Handler,
                    user_data: *mut ::libc::c_void) -> HPDF_Doc;
    pub fn HPDF_SetErrorHandler(pdf: HPDF_Doc,
                                user_error_fn: HPDF_Error_Handler)
     -> HPDF_STATUS;
    pub fn HPDF_Free(pdf: HPDF_Doc) -> ();
    pub fn HPDF_NewDoc(pdf: HPDF_Doc) -> HPDF_STATUS;
    pub fn HPDF_FreeDoc(pdf: HPDF_Doc) -> ();
    pub fn HPDF_HasDoc(pdf: HPDF_Doc) -> HPDF_BOOL;
    pub fn HPDF_FreeDocAll(pdf: HPDF_Doc) -> ();
    pub fn HPDF_SaveToStream(pdf: HPDF_Doc) -> HPDF_STATUS;
    pub fn HPDF_GetContents(pdf: HPDF_Doc, buf: *mut HPDF_BYTE,
                            size: *mut HPDF_UINT32) -> HPDF_STATUS;
    pub fn HPDF_GetStreamSize(pdf: HPDF_Doc) -> HPDF_UINT32;
    pub fn HPDF_ReadFromStream(pdf: HPDF_Doc, buf: *mut HPDF_BYTE,
                               size: *mut HPDF_UINT32) -> HPDF_STATUS;
    pub fn HPDF_ResetStream(pdf: HPDF_Doc) -> HPDF_STATUS;
    pub fn HPDF_SaveToFile(pdf: HPDF_Doc, file_name: *const ::libc::c_char)
     -> HPDF_STATUS;
    pub fn HPDF_GetError(pdf: HPDF_Doc) -> HPDF_STATUS;
    pub fn HPDF_GetErrorDetail(pdf: HPDF_Doc) -> HPDF_STATUS;
    pub fn HPDF_ResetError(pdf: HPDF_Doc) -> ();
    pub fn HPDF_CheckError(error: HPDF_Error) -> HPDF_STATUS;
    pub fn HPDF_SetPagesConfiguration(pdf: HPDF_Doc,
                                      page_per_pages: HPDF_UINT)
     -> HPDF_STATUS;
    pub fn HPDF_GetPageByIndex(pdf: HPDF_Doc, index: HPDF_UINT) -> HPDF_Page;
    pub fn HPDF_GetPageMMgr(page: HPDF_Page) -> HPDF_MMgr;
    pub fn HPDF_GetPageLayout(pdf: HPDF_Doc) -> HPDF_PageLayout;
    pub fn HPDF_SetPageLayout(pdf: HPDF_Doc, layout: HPDF_PageLayout)
     -> HPDF_STATUS;
    pub fn HPDF_GetPageMode(pdf: HPDF_Doc) -> HPDF_PageMode;
    pub fn HPDF_SetPageMode(pdf: HPDF_Doc, mode: HPDF_PageMode)
     -> HPDF_STATUS;
    pub fn HPDF_GetViewerPreference(pdf: HPDF_Doc) -> HPDF_UINT;
    pub fn HPDF_SetViewerPreference(pdf: HPDF_Doc, value: HPDF_UINT)
     -> HPDF_STATUS;
    pub fn HPDF_SetOpenAction(pdf: HPDF_Doc, open_action: HPDF_Destination)
     -> HPDF_STATUS;
    pub fn HPDF_GetCurrentPage(pdf: HPDF_Doc) -> HPDF_Page;
    pub fn HPDF_AddPage(pdf: HPDF_Doc) -> HPDF_Page;
    pub fn HPDF_InsertPage(pdf: HPDF_Doc, page: HPDF_Page) -> HPDF_Page;
    pub fn HPDF_Page_SetWidth(page: HPDF_Page, value: HPDF_REAL)
     -> HPDF_STATUS;
    pub fn HPDF_Page_SetHeight(page: HPDF_Page, value: HPDF_REAL)
     -> HPDF_STATUS;
    pub fn HPDF_Page_SetSize(page: HPDF_Page, size: HPDF_PageSizes,
                             direction: HPDF_PageDirection) -> HPDF_STATUS;
    pub fn HPDF_Page_SetRotate(page: HPDF_Page, angle: HPDF_UINT16)
     -> HPDF_STATUS;
    pub fn HPDF_Page_SetZoom(page: HPDF_Page, zoom: HPDF_REAL) -> HPDF_STATUS;
    pub fn HPDF_GetFont(pdf: HPDF_Doc, font_name: *const ::libc::c_char,
                        encoding_name: *const ::libc::c_char) -> HPDF_Font;
    pub fn HPDF_LoadType1FontFromFile(pdf: HPDF_Doc,
                                      afm_file_name: *const ::libc::c_char,
                                      data_file_name: *const ::libc::c_char)
     -> *const ::libc::c_char;
    pub fn HPDF_GetTTFontDefFromFile(pdf: HPDF_Doc,
                                     file_name: *const ::libc::c_char,
                                     embedding: HPDF_BOOL) -> HPDF_FontDef;
    pub fn HPDF_LoadTTFontFromFile(pdf: HPDF_Doc,
                                   file_name: *const ::libc::c_char,
                                   embedding: HPDF_BOOL)
     -> *const ::libc::c_char;
    pub fn HPDF_LoadTTFontFromFile2(pdf: HPDF_Doc,
                                    file_name: *const ::libc::c_char,
                                    index: HPDF_UINT, embedding: HPDF_BOOL)
     -> *const ::libc::c_char;
    pub fn HPDF_AddPageLabel(pdf: HPDF_Doc, page_num: HPDF_UINT,
                             style: HPDF_PageNumStyle, first_page: HPDF_UINT,
                             prefix: *const ::libc::c_char) -> HPDF_STATUS;
    pub fn HPDF_UseJPFonts(pdf: HPDF_Doc) -> HPDF_STATUS;
    pub fn HPDF_UseKRFonts(pdf: HPDF_Doc) -> HPDF_STATUS;
    pub fn HPDF_UseCNSFonts(pdf: HPDF_Doc) -> HPDF_STATUS;
    pub fn HPDF_UseCNTFonts(pdf: HPDF_Doc) -> HPDF_STATUS;
    pub fn HPDF_CreateOutline(pdf: HPDF_Doc, parent: HPDF_Outline,
                              title: *const ::libc::c_char,
                              encoder: HPDF_Encoder) -> HPDF_Outline;
    pub fn HPDF_Outline_SetOpened(outline: HPDF_Outline, opened: HPDF_BOOL)
     -> HPDF_STATUS;
    pub fn HPDF_Outline_SetDestination(outline: HPDF_Outline,
                                       dst: HPDF_Destination) -> HPDF_STATUS;
    pub fn HPDF_Page_CreateDestination(page: HPDF_Page) -> HPDF_Destination;
    pub fn HPDF_Destination_SetXYZ(dst: HPDF_Destination, left: HPDF_REAL,
                                   top: HPDF_REAL, zoom: HPDF_REAL)
     -> HPDF_STATUS;
    pub fn HPDF_Destination_SetFit(dst: HPDF_Destination) -> HPDF_STATUS;
    pub fn HPDF_Destination_SetFitH(dst: HPDF_Destination, top: HPDF_REAL)
     -> HPDF_STATUS;
    pub fn HPDF_Destination_SetFitV(dst: HPDF_Destination, left: HPDF_REAL)
     -> HPDF_STATUS;
    pub fn HPDF_Destination_SetFitR(dst: HPDF_Destination, left: HPDF_REAL,
                                    bottom: HPDF_REAL, right: HPDF_REAL,
                                    top: HPDF_REAL) -> HPDF_STATUS;
    pub fn HPDF_Destination_SetFitB(dst: HPDF_Destination) -> HPDF_STATUS;
    pub fn HPDF_Destination_SetFitBH(dst: HPDF_Destination, top: HPDF_REAL)
     -> HPDF_STATUS;
    pub fn HPDF_Destination_SetFitBV(dst: HPDF_Destination, left: HPDF_REAL)
     -> HPDF_STATUS;
    pub fn HPDF_GetEncoder(pdf: HPDF_Doc,
                           encoding_name: *const ::libc::c_char)
     -> HPDF_Encoder;
    pub fn HPDF_GetCurrentEncoder(pdf: HPDF_Doc) -> HPDF_Encoder;
    pub fn HPDF_SetCurrentEncoder(pdf: HPDF_Doc,
                                  encoding_name: *const ::libc::c_char)
     -> HPDF_STATUS;
    pub fn HPDF_Encoder_GetType(encoder: HPDF_Encoder) -> HPDF_EncoderType;
    pub fn HPDF_Encoder_GetByteType(encoder: HPDF_Encoder,
                                    text: *const ::libc::c_char,
                                    index: HPDF_UINT) -> HPDF_ByteType;
    pub fn HPDF_Encoder_GetUnicode(encoder: HPDF_Encoder, code: HPDF_UINT16)
     -> HPDF_UNICODE;
    pub fn HPDF_Encoder_GetWritingMode(encoder: HPDF_Encoder)
     -> HPDF_WritingMode;
    pub fn HPDF_UseJPEncodings(pdf: HPDF_Doc) -> HPDF_STATUS;
    pub fn HPDF_UseKREncodings(pdf: HPDF_Doc) -> HPDF_STATUS;
    pub fn HPDF_UseCNSEncodings(pdf: HPDF_Doc) -> HPDF_STATUS;
    pub fn HPDF_UseCNTEncodings(pdf: HPDF_Doc) -> HPDF_STATUS;
    pub fn HPDF_UseUTFEncodings(pdf: HPDF_Doc) -> HPDF_STATUS;
    pub fn HPDF_Page_CreateXObjectFromImage(pdf: HPDF_Doc, page: HPDF_Page,
                                            rect: HPDF_Rect,
                                            image: HPDF_Image,
                                            zoom: HPDF_Boolean)
     -> HPDF_XObject;
    pub fn HPDF_Page_CreateXObjectAsWhiteRect(pdf: HPDF_Doc, page: HPDF_Page,
                                              rect: HPDF_Rect)
     -> HPDF_XObject;
    pub fn HPDF_Page_Create3DAnnot(page: HPDF_Page, rect: HPDF_Rect,
                                   tb: HPDF_BOOL, np: HPDF_BOOL,
                                   u3d: HPDF_U3D, ap: HPDF_Image)
     -> HPDF_Annotation;
    pub fn HPDF_Page_CreateTextAnnot(page: HPDF_Page, rect: HPDF_Rect,
                                     text: *const ::libc::c_char,
                                     encoder: HPDF_Encoder)
     -> HPDF_Annotation;
    pub fn HPDF_Page_CreateFreeTextAnnot(page: HPDF_Page, rect: HPDF_Rect,
                                         text: *const ::libc::c_char,
                                         encoder: HPDF_Encoder)
     -> HPDF_Annotation;
    pub fn HPDF_Page_CreateLineAnnot(page: HPDF_Page,
                                     text: *const ::libc::c_char,
                                     encoder: HPDF_Encoder)
     -> HPDF_Annotation;
    pub fn HPDF_Page_CreateWidgetAnnot_WhiteOnlyWhilePrint(pdf: HPDF_Doc,
                                                           page: HPDF_Page,
                                                           rect: HPDF_Rect)
     -> HPDF_Annotation;
    pub fn HPDF_Page_CreateWidgetAnnot(page: HPDF_Page, rect: HPDF_Rect)
     -> HPDF_Annotation;
    pub fn HPDF_Page_CreateLinkAnnot(page: HPDF_Page, rect: HPDF_Rect,
                                     dst: HPDF_Destination)
     -> HPDF_Annotation;
